<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>ca.phon</groupId>
  <artifactId>phon-shell-plugin</artifactId>
  <name>PhonShell</name>
  <description>Interactive scripting console for Phon.</description>
  
  <licenses>
    <license>
      <name>GNU GPL v3.0+</name>
      <distribution>repo</distribution>
      <url>http://www.gnu.org/copyleft/gpl.html</url>
    </license>
  </licenses>
  
  <distributionManagement>
    <repository>
      <id>phon.ca-release</id>
      <name>Phon Release</name>
      <url>https://www.phon.ca/artifacts/libs-release-local</url>
    </repository>
    <snapshotRepository>
      <id>phon.ca-snapshot</id>
      <name>Phon Snapshot</name>
      <url>https://www.phon.ca/artifacts/libs-snapshot-local</url>
    </snapshotRepository>
  </distributionManagement>
  
  <repositories>
    <repository>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>central</id>
      <name>libs-release</name>
      <url>https://www.phon.ca/artifacts/libs-release</url>
    </repository>
    <repository>
      <snapshots/>
      <id>snapshots</id>
      <name>libs-snapshot</name>
      <url>https://www.phon.ca/artifacts/libs-snapshot</url>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>central</id>
      <name>plugins-release</name>
      <url>https://www.phon.ca/artifacts/plugins-release</url>
    </pluginRepository>
    <pluginRepository>
      <snapshots/>
      <id>snapshots</id>
      <name>plugins-snapshot</name>
      <url>https://www.phon.ca/artifacts/plugins-snapshot</url>
    </pluginRepository>
  </pluginRepositories>
  
  <dependencies>
    <dependency>
      <groupId>ca.phon</groupId>
      <artifactId>phon-app</artifactId>
      <version>3.0.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>ca.hedlund</groupId>
      <artifactId>jiss-core</artifactId>
      <version>0.6</version>
    </dependency>
    <dependency>
      <groupId>ca.hedlund</groupId>
      <artifactId>jiss-blocks</artifactId>
      <version>0.6</version>
    </dependency>
    <dependency>
      <groupId>ca.hedlund</groupId>
      <artifactId>jiss-history</artifactId>
      <version>0.6</version>
    </dependency>
    <dependency>
      <groupId>ca.hedlund</groupId>
      <artifactId>jiss-rsyntaxarea-input</artifactId>
      <version>0.6</version>
    </dependency>
    
    <dependency>
		<groupId>junit</groupId>
		<artifactId>junit</artifactId>
		<version>4.8.2</version>
		<scope>test</scope>
	</dependency>
  </dependencies>
  
  <build>
    <pluginManagement>
    	<plugins>
    		<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.codehaus.mojo</groupId>
										<artifactId>
											properties-maven-plugin
										</artifactId>
										<versionRange>
											[1.0-alpha-2,)
										</versionRange>
										<goals>
											<goal>set-system-properties</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
    	</plugins>
    </pluginManagement>
    <plugins>
		<!-- Setup target/source settings for Java compilation -->
		<plugin>
		  <groupId>org.apache.maven.plugins</groupId>
		  <artifactId>maven-compiler-plugin</artifactId>
		  <version>3.7.0</version>
		  <configuration>
		    <source>9</source>
		    <target>9</target>
		    <compilerArgs>
				<arg>--add-modules</arg>
				<arg>java.xml.bind</arg>
			</compilerArgs>
		  </configuration>
		</plugin>
		
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-plugin</artifactId>
			<configuration>
				<reuseForks>false</reuseForks>
				<forkCount>1</forkCount>
				<argLine>--add-modules java.xml.bind</argLine>
			</configuration>
		</plugin>
		
		<plugin>
			<!-- We use this plugin to ensure that our usage of the maven-jaxb2-plugin 
				is JDK 8 compatible in absence of a fix for https://java.net/jira/browse/MAVEN_JAXB2_PLUGIN-80. -->
			<groupId>org.codehaus.mojo</groupId>
			<artifactId>properties-maven-plugin</artifactId>
			<version>1.0-alpha-2</version>
			<executions>
				<execution>
					<id>set-additional-system-properties</id>
					<goals>
						<goal>set-system-properties</goal>
					</goals>
				</execution>
			</executions>
			<configuration>
				<properties>
					<property>
						<name>javax.xml.accessExternalSchema</name>
						<value>file,http</value>
					</property>
				</properties>
			</configuration>
		</plugin>
      
     	<plugin>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-xjc-plugin</artifactId>
				<configuration>
					<extensions>
						<extension>org.apache.cxf.xjcplugins:cxf-xjc-dv:2.3.0</extension>
					</extensions>
				</configuration>
				<executions>
					<execution>
						<id>generate-sources</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>xsdtojava</goal>
						</goals>
						<configuration>
							<sourceRoot>${basedir}/target/generated-sources/xjc</sourceRoot>
							<xsdOptions>
								<xsdOption>
									<xsd>${basedir}/src/main/resources/xml/xsd/scriptlib.xsd</xsd>
									<packagename>ca.phon.shell.scriptlibrary</packagename>
									<bindingFile>${basedir}/src/main/resources/xml/xjb/scriptlib.xjb</bindingFile>
								</xsdOption>
							</xsdOptions>
						</configuration>
					</execution>
				</executions>
			</plugin>
    </plugins>
  </build>
  <version>14</version>
</project>
